Bug#10109   "INSERT .. SELECT ... ON DUPLICATE KEY UPDATE fails"   Ensure that check_insert_fields() is only called once when   doing an INSERT..SELECT